done! but it was tough

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/userinfo
+spring.datasource.username=garhettm
+spring.datasource.password=tumadre7
+
+spring.jpa.hibernate.ddl-auto=update
